verif/test/deca/context/invalid/not-bad-type-verif.res
src/test/deca/context/invalid/not-bad-type.deca:10:16: Unary 'Not' is not compatible with type 'int'
